--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "My Website"
+title: "Peter Menzies"
 description: |
-  Welcome to the website. I hope you enjoy it!
+  Welcome to the website!
 site: distill::distill_website
 ---
 
