changed function-I-learned blog post to gathering user input for function arguments

--- a/_posts/2021-08-10-hello/hello.Rmd
+++ b/_posts/2021-08-10-hello/hello.Rmd
@@ -13,10 +13,15 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
+library(tidyverse)
+library(palmerpenguins)
 ```
 
 Distill is a publication format for scientific and technical writing, native to the web.
 
 Learn more about using Distill at <https://rstudio.github.io/distill>.
+
+
+
 
 
