added description to alec post

--- a/_posts/2021-08-26-some-r-functions/some-r-functions.Rmd
+++ b/_posts/2021-08-26-some-r-functions/some-r-functions.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Some R functions"
 description: |
-  A short description of the post.
+  Random stuff for Alec to check out
 author:
   - name: Peter Menzies
     url: {}
