Added source url to site_yml, and changed slug on xmas blogpost

--- a/_posts/2021-08-10-user-input-within-functions/User-input-within-functions.Rmd
+++ b/_posts/2021-08-10-user-input-within-functions/User-input-within-functions.Rmd
@@ -9,6 +9,9 @@ date: 08-22-2021
 output:
   distill::distill_article:
     self_contained: false
+categories:
+  - R
+  - "Function I Learned"
 ---
 
 
