--- a/_posts/2021-08-23-christmas-gift-exchange/christmas-gift-exchange.Rmd
+++ b/_posts/2021-08-23-christmas-gift-exchange/christmas-gift-exchange.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Random Secret Santa R Script"
+title: "Secret Santa R Script"
 description: |
   A script I created to automate my family's yearly secret santa gift exchange
 author:
@@ -9,6 +9,9 @@ date: 08-23-2021
 output:
   distill::distill_article:
     self_contained: false
+categories:
+  - R
+slug: "2021-23-08-secret-santa-r-script"
 ---
 
 
@@ -20,7 +23,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Here's a little context needed to understand the program I created, before we get to the actual code. 
 
-Each year my extended family does a secret santa gift exchange where each member of the family is randomly paired with another — the one parameter being that each person must be matched with someone outside of their nuclear family. The matches are assigned using the good old "pick a name from the hat" method. If you draw a name from within your immediate family, you try again until you get someone who isn't. This process seemed like an excellent candidate for automation, and with a couple weeks of R under my belt, it felt like a perfect task to apply what I had learned so far.
+Each year my extended family does a secret santa gift exchange where each member of the family is randomly paired with another — the one caveat being that each person must be matched with someone outside of their nuclear family. Traditionally, the matches are assigned using the good old "pick a name from the hat" method. If you draw a name from within your immediate family, you try again until you get someone who isn't. This process seemed like an excellent candidate for automation, and with a couple weeks of R under my belt, it felt like a perfect task to apply what I had learned so far.
 
 ### Packages used: `tidyverse` and `here`
 
