fixed typos in bee blog post

--- a/_posts/2021-12-02-apisvsbombus/apis_vs_bombus.Rmd
+++ b/_posts/2021-12-02-apisvsbombus/apis_vs_bombus.Rmd
@@ -32,7 +32,7 @@ library(kableExtra)
 
 Pollinator decline is among the world's most pressing environmental issues. The creatures that fill this niche are necessary for the reproduction of roughly 85% of flowering plant species, and about three-fourths of the world's staple crop species rely on them (US Forest Service). The services that pollinators provide in the US agricultural system were valued at \$34 billion in 2012 (Jordan et al. 2021). That staggering figure doesn't even include the value of the many ecosystems that hinge on their presence. Unfortunately, pollinator populations are declining world wide at alarming rates (Potts et al. 2010). Honeybees have become the poster child of this issue---and while the attention is well-deserved, the US is home to around 4000 native bee species, many of which are also facing population declines and are also highly important pollinators (US Forest Service). 49 of these species are members of the genus _Bombus_, commonly known as bumblebees. In addition to their general efficacy as pollen carriers, bumblebees are the sole pollinators of certain plants they have coevolved with. Flowers of plants like blueberries, tomatoes, pumpkins, and many others require what's known as buzz pollination, or sonication---this means they need a bee to vibrate at a particular frequency to release their pollen (Vallejo-Marín 2019). _Bombus_ species perform this form of pollination, making them invaluable to our native ecosystems and many important food crops.
 
-Interestingly, some studies have shown evidence that managed honeybees, which are nonnative, may be outcompeting native bees for resources (Angelella, McCullough, and O'Rourke 2021)(Mallinger, Gaines-Day, and Gratton 2017). It's crucial that we understand everything that might be contributing to the decline of native bee species. The question this analysis investiates is: how does the number of managed honeybee colonies effect bumblebee occurrence in US counties? 
+Interestingly, some studies have shown evidence that managed honeybees, which are nonnative, may be outcompeting native bees for resources (Angelella, McCullough, and O'Rourke 2021)(Mallinger, Gaines-Day, and Gratton 2017). It's crucial that we understand everything that might be contributing to the decline of native bee species. The question this analysis investigates is: how does the number of managed honeybee colonies effect bumblebee occurrence in US counties? 
 
 ## Data
 
@@ -105,7 +105,7 @@ bombus_sf <- bombus_totals %>%
 
 ### Interpolation
 
-After summing the occurrence counts at each unique latitude and longitude in the bumblebee dataset, I used the `autofitVariogram` function in the `automap` package to create a fitted variogram model. I then created a grid with the spatial bounds of the bumblebee dataset composed of 0.4° x 0.4° cells. Using the `krige()` function in the `gstats` package I interpolated values of bumblebee occurrence onto the grid based on the variogram model. In order to derive a single estimated value of bumblebee occurrence in each county, I joined the interpolated output with a US counties dataset, and calculated the mean predicted occurrence in each county. I subsetted the resulting data to only states that were surveyed and only counties for which honeybee data was available by performing an inner join with the honeybee dataset. The interpolated mean bumblebee occurrence data are visualized below.
+After summing the occurrence counts at each unique latitude and longitude in the bumblebee dataset, I used the `autofitVariogram` function in the `automap` package to create a fitted variogram model. I then created a grid with the spatial bounds of the bumblebee dataset composed of 0.4° x 0.4° cells. Using the `krige()` function in the `gstats` package I interpolated values of bumblebee occurrence onto the grid based on the variogram model. In order to derive a single estimated value of bumblebee occurrence in each county, I joined the interpolated output with a US counties dataset, and calculated the mean predicted occurrence in each county. I subsetted the resulting data to only states that were surveyed and only counties for which honeybee data were available by performing an inner join with the honeybee dataset. The interpolated mean bumblebee occurrence data are visualized below.
 
 ```{r, warning=FALSE, message=FALSE, include=FALSE}
 #----
