--- a/climbing.Rmd
+++ b/climbing.Rmd
@@ -14,10 +14,10 @@ library(here)
 
 ## Places I've Climbed
 
-Here's an interactive visualization of all the places I've climbed over the years. It includes location names, rock types, and the forms of climbing I've done in each spot.
+Here's an interactive visualization I created of all the places I've climbed over the years. It includes location names, rock types, and the forms of climbing I've done at each spot.
 
 ```{r, code_folding=TRUE}
-climbing <- read_csv(here("climbing_locations.csv"))
+climbing <- read_csv(here("data", "climbing_locations.csv"))
 
 climbing_sf <- climbing %>% 
   st_as_sf(coords = c("long", "lat"), crs = 4269)
