--- a/_posts/2021-12-02-apisvsbombus/apis_vs_bombus.Rmd
+++ b/_posts/2021-12-02-apisvsbombus/apis_vs_bombus.Rmd
@@ -9,6 +9,9 @@ date: 12-02-2021
 output:
   distill::distill_article:
     self_contained: false
+categories: 
+  - R
+  - "Data Science"
 ---
 
 ```{r setup, echo=FALSE}
